--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -12,7 +12,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY }}
-      TF_VAR_PUBLIC_KEY: ${{secrets.SSH_PUBLIC_KEY}}
+      TF_VAR_public_key: ${{secrets.SSH_PUBLIC_KEY}}
     defaults:
       run:
         working-directory: ./infra/
