--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,15 @@
 version: 0.0
 os: linux
-
 hooks:
+  ApplicationStop:
+    - location: scripts/kill_container.sh
+      timeout: 1000
+      runas: ubuntu
   AfterInstall:
+    - location: scripts/load_image.sh
+      timeout: 1000
+      runas: ubuntu
+  ApplicationStart:
     - location: scripts/start_container.sh
-      timeout: 3000
-      runas: root
+      timeout: 1000
+      runas: ubuntu
