--- a/.github/workflows/deploy-aws.yaml
+++ b/.github/workflows/deploy-aws.yaml
@@ -2,7 +2,7 @@ name: Deploy to AWS EC2 Instance
 
 on:
   workflow_run:
-    workflows: ["docker-image","terraform"]
+    workflows: ["docker-image", "terraform"]
     types:
       - completed
 
@@ -14,13 +14,22 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      - name: Deploy the app
+      - name: Install AWS CLI
         run: |
-          aws deploy create-deployment \
-          --application-name quizz-app \
-          --deployment-group-name quizz-app-dev \
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_CD }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_CD }}
-          AWS_DEFAULT_REGION: us-east-1
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install --update
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CD }}
+          aws-region: us-east-1
+
+      - name: Trigger deployment
+        run: |
+            aws deploy create-deployment \
+              --application-name Quizz_App \
+              --deployment-group-name Sample_DepGroup \
+              --file-exists-behavior DISALLOW
