deploy-aws.yaml modified

--- a/.github/workflows/deploy-aws.yaml
+++ b/.github/workflows/deploy-aws.yaml
@@ -32,7 +32,6 @@ jobs:
                     aws deploy create-deployment \
                     --application-name Quizz_App \
                     --deployment-group-name Sample_DepGroup \
-                    --revision \
-                    revisionType=GitHub,repository=teee1307/react-js-cd,commitId=${{ github.sha }} \
+                    --revision '{"gitHubLocation":{"commitId":${{ github.sha }},"repository":"teee1307/react-js-cd"}}' \
                     --file-exists-behavior DISALLOW
                 
