--- a/.github/workflows/deploy-aws.yaml
+++ b/.github/workflows/deploy-aws.yaml
@@ -32,7 +32,7 @@ jobs:
                     aws deploy create-deployment \
                     --application-name Quizz_App \
                     --deployment-group-name Sample_DepGroup \
-                    --revision "{\"gitHubLocation\":{\"commitId\":\"${{ github.sha }}\",\"repository\":\"teee1307/react-js-cd\"}}" \
+                    --github-location repository="teee1307/react-js-cd",commitId="${{ github.sha }}"
 
                     --file-exists-behavior DISALLOW
                 
