--- a/.github/workflows/deploy-aws.yaml
+++ b/.github/workflows/deploy-aws.yaml
@@ -33,6 +33,6 @@ jobs:
                     --application-name Quizz_App \
                     --deployment-group-name Sample_DepGroup \
                     --github-location repository="teee1307/react-js-cd",commitId="${{ github.sha }}"
-
+                    --target-tags "Name=CodeDeployDemo"
                 
                 
