--- a/.github/workflows/deploy-aws.yaml
+++ b/.github/workflows/deploy-aws.yaml
@@ -32,5 +32,5 @@ jobs:
                     aws deploy create-deployment \
                     --application-name Quizz_App \
                     --deployment-group-name Sample_DepGroup \
-                    --github-location repository="teee1307/react-js-cd",commitId="${{ github.sha }}"
+                    --github-location repository="teee1307/react-js-cd",commitId="${{ github.sha }}"\
                     --target-instances "tag:Name=CodeDeployDemo"
